[package]
name = "io_plus"
version = "0.1.0"
edition = "2021"
authors = ["Floris-xlx @ xylex.ai"]
description = "A library for reading and writing data to and from files and streams."

[dependencies]
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.30.12"
anyhow = "1.0.86"
image =  "0.25.1"
base64 = "0.22.1"
mp4 = "0.14.0"
chrono = "0.4.31"
env_logger = "0.11.3"
log = "0.4.21"
imageproc = "0.25.0"
walkdir = "2.5.0"
tokio = { version = "1.38.0", features = ["full"] }
